抓取电力微课堂

--- a/src/test/resources/millipede.properties
+++ b/src/test/resources/millipede.properties
@@ -9,7 +9,13 @@ millipede.processors=org.animeaholic.millipede.demo.processor.Wuba_List_Processo
 					 org.animeaholic.millipede.test.Test_PlanProcessor;\
 					 org.animeaholic.millipede.test.VOA_PlanProcessor;\
 					 org.animeaholic.millipede.test.VOA_HomeProcessor;\
-					 org.animeaholic.millipede.test.VOA_DetailProcessor;
+					 org.animeaholic.millipede.test.VOA_DetailProcessor;\
+					 org.animeaholic.millipede.huadian.PlainProcessor;\
+					 org.animeaholic.millipede.huadian.LoginProcessor;\
+					 org.animeaholic.millipede.huadian.ContentProcessor;\
+					 org.animeaholic.millipede.huadian.SpecialanswerProcessor;\
+					 org.animeaholic.millipede.huadian.PracticeProcessor;\
+					 org.animeaholic.millipede.huadian.AnswerProcessor;
 
 #（选填）因为DefaultCrawlProcessor是框架内自动注册好的，所以无需在上面注册，但是也提供线程数和任务队列的配置，默认值上面已经说明了
 millipede.DefaultCrawlProcessor.threadNum=10
@@ -21,6 +27,7 @@ millipede.DefaultCrawlProcessor.readTimeout=10000
 #（选填）指定某一域名的全局访问频率，单位毫秒，默认5000
 millipede.visitControl.58.com=3000
 millipede.visitControl.51voa.com=3000
+millipede.visitControl.cdqindao.com=3000
 
 #（必填）wuba就是计划名，指定这个计划的处理者，这个处理者也必须在下面的millipede.processors配置
 millipede.plan.wuba.processor=org.animeaholic.millipede.demo.processor.Wuba_Plan_Processor
@@ -31,5 +38,8 @@ millipede.plan.wuba.author=zhangsaibei
 millipede.plan.test.processor=org.animeaholic.millipede.test.VOA_PlanProcessor
 millipede.plan.test.seedUrl=http://www.51voa.com/
 
+millipede.plan.huadian.processor=org.animeaholic.millipede.huadian.PlainProcessor
+millipede.plan.huadian.seedUrl=http://hd.cdqindao.com:8089/?hid=hid&username=15171112472&password=2407899Hj.
+
 #（必填）激活上面定义好的计划，值需要和上面的一样，只有在这里激活才会执行，不激活的计划不会被执行
-millipede.plan=wuba,test
+millipede.plan=huadian
