--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
-					<source>7</source>
-					<target>7</target>
+					<source>8</source>
+					<target>8</target>
 					<encoding>utf8</encoding>
 				</configuration>
 			</plugin>
@@ -61,6 +61,12 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.1.43</version>
 			<scope>provided</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.0.0</version>
 		</dependency>
 	</dependencies>
 
